fix spacing issue What Youll Get header

--- a/src/sass/components/supportingtakeaway.scss
+++ b/src/sass/components/supportingtakeaway.scss
@@ -7,6 +7,10 @@
 	text-align: right;
 }
 
+.takeawayOutput {
+	margin-left: -8px;
+}
+
 .takeawayCardContent {
 	padding-top: 16px;
 	padding-left: 12px;
